# raft-merkle

./: Cargo.toml  README.md
.github/workflows/: ci.yml
example-server/: Cargo.toml
example-server/src/: app.rs  main.rs
raft-merkle/: Cargo.toml
raft-merkle/src/: types.rs
src/: main.rs  node.rs
