[package]
name = "example-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8.8"
serde = "1.0.228"
tokio = {version="1.48.0", features=["full"]}
tracing-subscriber = "0.3.22"
openraft = "0.9.21"
openraft-memstore = "0.9.21"
raft-merkle = { version = "0.1.0", path = "../raft-merkle" }
reqwest = "0.13.1"
